# bokdata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bokdata/: __init__.py
bokdata/monetary_policy/: __init__.py  client.py  constants.py  fetcher.py  selenium_fetcher.py
tests/: test_integration.py  test_monetary_policy.py
