[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bokdata"
version = "0.1.0"
description = "한국은행 데이터를 pykrx처럼 쓸 수 있는 Python 패키지"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Malarngbbobbi", email = "yunshinwoo967@gmail.com" }]
requires-python = ">=3.10"
keywords = ["bok", "bank-of-korea", "monetary-policy", "finance", "korea"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
selenium = ["selenium>=4.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Malarngbbobbi/bokdata"
Repository = "https://github.com/Malarngbbobbi/bokdata"
Issues = "https://github.com/Malarngbbobbi/bokdata/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["bokdata*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
